--- a/templates/header.html
+++ b/templates/header.html
@@ -59,9 +59,22 @@
                                     Home
                                 </a>
                             </li>
-                            <li class="nav-item ">
-                                <a href="{% url 'about_us' %}" class="nav-link js-scroll-trigger">
-                                    About us
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbar3" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    About Us<i class="fa fa-angle-down"></i>
+                                </a>
+                                <div class="dropdown-menu" aria-labelledby="navbar3">
+                                     <a class="dropdown-item " href="{% url 'about_us' %}">
+                                        About US
+                                    </a>
+                                     <a class="dropdown-item " href="{% url 'about_us' %}">
+                                        History
+                                    </a>
+                                </div>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link dropdown-toggle" href="{% url 'blogs' %}">
+                                    Gallery
                                 </a>
                             </li>
                             <li class="nav-item">
